samples/_failures_safe/1761333748_c5d7cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32878da1.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_32878da1.c:138:9: error: expected expression at end of input
  138 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_32878da1.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32878da1.c:138:9: error: expected declaration or statement at end of input
